--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,59 +1,51 @@
-version: "3.9"
+
 
 services:
   backend:
     build: ./backend
     container_name: backend
     ports:
-      - "${APP_PORT}:3000"
+      - "3000:3000"
     volumes:
       - ./backend:/app
       - /app/node_modules
     env_file:
       - .env
     depends_on:
-      - mysql
       - minio
 
   mysql:
     image: mysql:8
-    container_name: mysql
     environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_ROOT_PASSWORD: 123456
     ports:
-      - "${MYSQL_PORT}:3306"
+      - "3309:3306"
     volumes:
-      - mysql_data:/var/lib/mysql
-
-  adminer:
-    image: adminer
-    container_name: adminer
-    ports:
-      - "8081:8080"
+      - db_data:/var/lib/mysql
 
   dozzle:
-    image: amir20/dozzle:latest
-    container_name: dozzle
+    image: amir20/dozzle
     ports:
       - "9999:8080"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
 
+
+
   minio:
     image: minio/minio
     container_name: minio
-    restart: always
+    restart: unless-stopped
     ports:
-      - "${MINIO_PORT}:9000"
-      - "${MINIO_CONSOLE_PORT}:9001"
+      - "9000:9000"
+      - "9001:9001"
     environment:
-      MINIO_ROOT_USER: ${MINIO_ROOT_USER}
-      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
+      MINIO_ROOT_USER: minio  
+      MINIO_ROOT_PASSWORD: minio123
     command: server /data --console-address ":9001"
     volumes:
       - minio_data:/data
-
+  
 volumes:
-  mysql_data:
   minio_data:
+  db_data:
