--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,8 @@
     "express": "^4.22.1",
     "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.3",
+    "minio": "^8.0.6",
+    "multer": "^2.0.2",
     "mysql2": "^3.16.0"
   },
   "devDependencies": {
