--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,9 @@ services:
       - /app/node_modules
     env_file:
       - .env
+    environment:
+      DB_HOST: mysql
+      DB_PORT: 3306
     depends_on:
       - minio
 
@@ -39,9 +42,8 @@ services:
     ports:
       - "9000:9000"
       - "9001:9001"
-    environment:
-      MINIO_ROOT_USER: minio  
-      MINIO_ROOT_PASSWORD: minio123
+    env_file:
+      - .env
     command: server /data --console-address ":9001"
     volumes:
       - minio_data:/data
