--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       DB_PORT: 3306
     depends_on:
       - minio
+      - mysql
 
   frontend:
     build:
@@ -32,6 +33,7 @@ services:
 
   mysql:
     image: mysql:8
+    container_name: mysql
     environment:
       MYSQL_ROOT_PASSWORD: 123456
     ports:
