--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,8 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "vue": "^3.5.24",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue-sonner": "^2.0.9"
   },
   "devDependencies": {
     "@types/node": "^25.0.10",
