--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,38 @@
+# Database
 DB_HOST=
 DB_USER=
 DB_PASS=
 DB_NAME=
+DB_PORT=
 
+# JWT
 JWT_SECRET=
 
-MINIO_ACCESS_KEY=
-MINIO_SECRET_KEY=
+# MinIO
+MINIO_ROOT_USER=
+MINIO_ROOT_PASSWORD=
+MINIO_ENDPOINT=
 
+# Email
 EMAIL_USER=
 EMAIL_PASS=
 
+# VNPay
 VNP_TMN_CODE=
-VNP_HASH_SECRET= 
+VNP_HASH_SECRET=
 VNP_URL=
 VNP_RETURN_URL=
+
+# Client URL
+CLIENT_URL=
+
+# Google Login
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
+# Facebook Login
+FACEBOOK_APP_ID=
+FACEBOOK_APP_SECRET=
+
+# Frontend (Vite)
+VITE_API_URL=
