--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,8 @@ services:
     container_name: frontend
     ports:
       - "3001:3001"
+    env_file:
+      - .env
     environment:
       CHOKIDAR_USEPOLLING: "true"
     volumes:
