--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,11 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon --verbose src/index.js"
+    "dev": "nodemon --verbose src/index.js",
+    "db:migrate": "sequelize-cli db:migrate",
+    "db:create": "sequelize-cli db:create",
+    "db:seed": "sequelize-cli db:seed:all",
+    "migration:generate": "sequelize-cli migration:generate --name"
   },
   "keywords": [],
   "author": "",
@@ -29,7 +33,8 @@
     "sequelize": "^6.37.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "sequelize-cli": "^6.6.5"
   },
   "description": ""
 }
