--- a/backend/package.json
+++ b/backend/package.json
@@ -22,8 +22,10 @@
     "express": "^4.22.1",
     "express-session": "^1.19.0",
     "express-validator": "^7.3.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "minio": "^8.0.6",
+    "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "mysql2": "^3.16.0",
     "nodemailer": "^7.0.13",
