--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,7 @@ services:
     container_name: mysql
     environment:
       MYSQL_ROOT_PASSWORD: 123456
+      MYSQL_DATABASE: testdb
     ports:
       - "3309:3306"
     volumes:
